--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -122,7 +122,8 @@ body {
     }
 
     &.active {
-      background-color: $color-dark;
+      border-bottom: 7px solid #235C44;
+      height: 38px !important;
     }
 
     &:hover {
