(feat) add toast to spot view when saving spots

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -548,7 +548,9 @@ form {
   top: calc(100% - #{$nav-height});
   left: 0;
   width: calc(100% - 52px);
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+  font-weight: bold;
   margin: 5px;
   padding: 5px 20px;
   text-align: center;
