--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -483,7 +483,7 @@ form {
 .chat-card-container {
   display: none;
   opacity: 100;
-  z-index: -1;
+  z-index: -3;
   width: 100%;
   height: 100%;
 
@@ -730,39 +730,34 @@ form {
 .user-bubble {
   position:relative;
   padding:10px 20px;
-  color:white;
+  color:white; 
   background:#0B93F6;
-  border-radius:10px 10px 0px 10px;
+  border-radius: 10px 10px 0 10px;
   float: right;
-  margin: 10px;
-
+    
   &:before {
     content:"";
     position:absolute;
-    z-index:-1;
+    z-index: 0;
     bottom:-2px;
-    right:-10px;
+    right:-7px;
     height:20px;
-    width:20px;
-    background:#0B93F6;
+    border-right:20px solid #0B93F6;
+    border-bottom-left-radius: 16px 14px;
+    -webkit-transform:translate(0, -2px);
   }
 
   &:after {
     content:"";
     position:absolute;
-    z-index:1;
+    z-index: 0;
     bottom:-2px;
-    right:-56px;
-    width:26px;
-    height:20px;
+    right: -56px;
+    width: 26px;
+    height: 20px;
     background:white;
     border-bottom-left-radius: 10px;
     -webkit-transform:translate(-30px, -2px);
-           transform:translate(-30px, -2px);
-  }
-
-  .message-footer {
-    float: right;
   }
 }
 
