(style) justified bio on profile

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -687,8 +687,8 @@ form {
 }
 
 .profile-bio {
-  text-align: center;
-  padding: 10px;
+  text-align: justify;
+  padding: 0 30px;
 }
 
 .profile-stats {
