--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1021,3 +1021,12 @@ input#start {
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.filter-container {
+  width: calc(100vw / 2);
+  opacity: 0.75;
+}
+
+.filter-form {
+  padding: 0px;
+}
